Requires:
~~~~~~~~~
- CPSSchemas > 0.39
New features:
~~~~~~~~~~~~~
- adding search capability to the book document. The search box can be 
  configured independently for each book.
- implementing a flat view of the book document, with the book displayed in
  one single page. The flat/with pages behaviour can be configured for each
  book.
- adding the posibility to import documents from a ZIP file. For each file
  in the ZIP archive, an attached file will be created, with the same name
  as the original file. The mimetypes for the attached files are obtained
  automatically based on the extension of the imported files.
- added possibility to select the document Language at creation time 
Bug fixes:
~~~~~~~~~~
- Removed some needless <span> elements used for i18n.
- Made object construction keep the proxy set by the workflow tool,
  for the benefit of computed fields that need it.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Changed method name verifyMetaDatas -> verifyMetaData since this is the
  correct spelling.
- default layout libs: got rid or widget_group_id and style (visibility) that
  were not used.