@@ -6,9 +6,9 @@ New features:
 - adding search capability to the book document. The search box can be 
   configured independently for each book.
 - implementing a flat view of the book document, with the book displayed in
-  one single page. The flat/with pages behaviour can be configured for each
+  one single page. The flat/with pages behavior can be configured for each
   book.
-- adding the posibility to import documents from a ZIP file. For each file
+- adding the possibility to import documents from a ZIP file. For each file
   in the ZIP archive, an attached file will be created, with the same name
   as the original file. The mimetypes for the attached files are obtained
   automatically based on the extension of the imported files.
@@ -18,6 +18,9 @@ Bug fixes:
 - Removed some needless <span> elements used for i18n.
 - Made object construction keep the proxy set by the workflow tool,
   for the benefit of computed fields that need it.
+- Made the News and PressRelease document types only have 1 column and not 2.
+  With 2 columns those document types were utterly unusable and moreover having
+  the notion of 2 columns in the schema is not that good anyway.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Changed method name verifyMetaDatas -> verifyMetaData since this is the
